# query-lite

./: CHANGELOG.md  Cargo.toml  FEATURE_TRADITIONAL_HTTP.md  README.md
docs/: todo.txt
src/: error.rs  lib.rs  parse_tests.rs  query.rs  sql.rs  utils.rs
tests/: http.rs  lib.rs  rusqlite.rs  sql.rs  sqlx.rs
