[package]
name = "query-lite"
version = "0.10.0"
edition = "2024"
authors = ["D4EM0N"]
categories = ["web-programming", "database"]
description = "Convert HTTP query parameters to SQLite queries"
documentation = "https://docs.rs/query-lite"
keywords = ["http", "sql", "sqlite", "query"]
license = "MIT"
repository = "https://github.com/0xC0DE666/query-lite"
rust-version = "1.88"

[dependencies]
url = { version = "^2" }
indexmap = { version = "^2" }
thiserror = { version = "^2", default-features = false }

# sqlite support
rusqlite = { version = "^0.32", default-features = false, optional = true }
sqlx = { version = "^0.8", default-features = false, optional = true }

[features]
default = ["sql", "rusqlite", "sqlx"]
sql = []
rusqlite = ["dep:rusqlite"]
sqlx = ["dep:sqlx", "sqlx/sqlite"]
