[package]
name = "query-lite"
version = "0.12.0"
edition = "2024"
authors = ["D4EM0N"]
categories = ["database", "web-programming"]
description = "A convenient SQL query builder for rusqlite with HTTP query parameter parsing support"
documentation = "https://docs.rs/query-lite"
keywords = ["sql", "sqlite", "rusqlite", "query-builder"]
license = "MIT"
repository = "https://github.com/0xC0DE666/query-lite"
rust-version = "1.88"

[dependencies]
url = { version = "2.5" }
indexmap = { version = "2.13" }
thiserror = { version = "2.0", default-features = false }
rusqlite = { version = "0.38", default-features = false, optional = true }

[features]
default = ["sql"]
sql = ["dep:rusqlite"]
http = []
